# diesel-jsonb-example

./: Cargo.toml  jsonb_table.sql
src/: main.rs
