[package]
name = "jsonb-query"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"